--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -7,7 +7,7 @@
   },
   "header": {
     "home": "首页",
-    "park": "DeBear",
+    "park": "Menu",
     "more": "关于",
     "wallet": "我的钱包",
     "lan": "Language",
@@ -20,7 +20,7 @@
   "home": {
     "balance": "我的余额",
     "supply": "当前总供应量",
-    "see": "查看DeBear",
+    "see": "查看Menu",
     "Pledge": "我的质押",
     "Totalpledge": "总质押",
     "statistical": "ETH/USDT 统计资料",
