Deleted some useless assets.

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -10,7 +10,7 @@
     "park": "Menu",
     "more": "More",
     "wallet": "My Wallet",
-    "lan": "语言",
+    "lan": "Language",
     "account": "My Account",
     "balance": " Balance",
     "balance1": " Balance",
