--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -10,7 +10,7 @@
     "park": "Menu",
     "more": "关于",
     "wallet": "我的钱包",
-    "lan": "Language",
+    "lan": "语言",
     "account": "账户",
     "balance": "余额",
     "balance1": "余额",
